// Vitest Snapshot v1

exports[`formats > android/resources > should match default snapshot 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>

<!--
  Do not edit directly
  Generated on Thu, 01 Sep 2022 04:36:21 GMT
-->
<resources>
  <dimen name=\\"size-font-small\\">12rem</dimen>
  <dimen name=\\"size-font-large\\">18rem</dimen>
  <color name=\\"color-base-red\\">#ff0000</color><!-- comment -->
  <color name=\\"color-white\\">#ffffff</color>
  
</resources>
"
`;

exports[`formats > android/resources > with resourceMap override should match snapshot 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>

<!--
  Do not edit directly
  Generated on Thu, 01 Sep 2022 04:36:21 GMT
-->
<resources>
  <color name=\\"backgroundColorSecondary\\">#F2F3F4</color>
  <color name=\\"fontColorPrimary\\">#000000</color>
  
</resources>
"
`;

exports[`formats > android/resources > with resourceType override should match snapshot 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>

<!--
  Do not edit directly
  Generated on Thu, 01 Sep 2022 04:36:21 GMT
-->
<resources>
  <dimen name=\\"size-font-small\\">12rem</dimen>
  <dimen name=\\"size-font-large\\">18rem</dimen>
  <dimen name=\\"color-base-red\\">#ff0000</dimen><!-- comment -->
  <dimen name=\\"color-white\\">#ffffff</dimen>
  
</resources>
"
`;
